[tool.poetry]
name = "timeshifter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
regex = "^2022.3.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
mypy = "^0.942"
flake8-isort = "^4.1.1"
flake8-mypy = "^17.8.0"

[tool.poetry.scripts]
timeshifter = "timeshifter.timeshifter:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
